# NewsBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  News API.yaml  README.md  db.json  docker-compose.yml  nginx.conf  pyproject.toml
NewsBot/: asgi.py  settings.py  urls.py  wsgi.py
bot/: callback_factory.py  pagination.py  service_async.py  state_group.py
bot/heandlers/: news.py  start.py
bot/keyboards/: inline.py
bot/logging_settings/: logging.py
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/management/commands/: runbot.py
news/migrations/: 0001_initial.py  0002_rename_slug_news_title.py
