[tool.poetry]
name = "newsbot"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <pavelmazikinvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
loguru = "^0.7.2"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"
aiogram = "^3.4.1"
redis = "^5.0.3"
psycopg2 = "^2.9.9"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
